--- a/Infrasctructure/SmartLibrary.Infrastructure.csproj
+++ b/Infrasctructure/SmartLibrary.Infrastructure.csproj
@@ -1,19 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Infrasctructure\SmartLibrary.Infrastructure.csproj" />
     <ProjectReference Include="..\SmartLibrary.Application\SmartLibrary.Application.csproj" />
     <ProjectReference Include="..\SmartLibrary.Contracts\SmartLibrary.Contracts.csproj" />
+    <ProjectReference Include="..\SmartLibrary.Domain\SmartLibrary.Domain.csproj" />
   </ItemGroup>
 
 </Project>
