--- a/SmartLibrary.Application/SmartLibrary.Application.csproj
+++ b/SmartLibrary.Application/SmartLibrary.Application.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SmartLibrary.Contracts\SmartLibrary.Contracts.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SmartLibrary.Domain\SmartLibrary.Domain.csproj" />
   </ItemGroup>
 
