feat: Add datetime provider service, jwt settings for token generator
Created JwtSettings class to hold jwt settings for token generator
to manage jwt token generation and validation.
Exported user secret to user secrets manager.

--- a/SmartLibrary.API/appsettings.Development.json
+++ b/SmartLibrary.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret":  "",
+    "ExpirationInMinutes": 60,
+    "Issuer": "SmartLibrary",
+    "Audience": "SmartLibrary"
   }
 }
