--- a/SmartLibrary.API/SmartLibrary.API.csproj
+++ b/SmartLibrary.API/SmartLibrary.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>6957d559-88f6-405d-b5ca-7bbd31972436</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
