feat: Modify Infrasctructure.DependencyInjection to validate jwt token

--- a/SmartLibrary.API/SmartLibrary.API.csproj
+++ b/SmartLibrary.API/SmartLibrary.API.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\SmartLibrary.Contracts\SmartLibrary.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Errors\" />
+  </ItemGroup>
+
 </Project>
