feat(Database): Add ApplicationDbContext and configure project to use in memory database.
(before migration)

--- a/SmartLibrary.API/appsettings.Development.json
+++ b/SmartLibrary.API/appsettings.Development.json
@@ -6,9 +6,12 @@
     }
   },
   "JwtSettings": {
-    "Secret":  "",
+    "Secret": "super-secret-key-that-is-very-very-long",
     "ExpirationInMinutes": 60,
     "Issuer": "SmartLibrary",
     "Audience": "SmartLibrary"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartLibraryDb;Trusted_Connection=True;"
   }
 }
