--- a/SmartLibrary.RazorPagesAdmin/SmartLibrary.RazorPagesAdmin.csproj
+++ b/SmartLibrary.RazorPagesAdmin/SmartLibrary.RazorPagesAdmin.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="111.2.0" />
+  </ItemGroup>
+
 </Project>
